fix active link

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           <li>
             <a
               href=""
-              class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+              class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
               >صفحه اصلی</a
             >
           </li>
