--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ir" dir="rtl" class="overflow-x-hidden">
+<html lang="ir" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -660,7 +660,7 @@
       <div class="absolute left-0 z-10 hidden md:block">
         <img src="./assets/images/pattern-3.png" alt="" />
       </div>
-      <section class="relative z-40 bg-[#FBEACC] py-10">
+      <section class="relative z-40 overflow-hidden bg-[#FBEACC] py-10">
         <div class="mx-8 flex flex-col items-center justify-center">
           <div>
             <div class="mb-[6rem] flex items-center gap-3 sm:mb-0">
