--- a/src/index.html
+++ b/src/index.html
@@ -1515,32 +1515,32 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-2.png" alt="" />
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-2.png" alt="" />
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-3.png" alt="" />
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-4.png" alt="" />
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-5.png" alt="" />
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="w-fit rounded-full bg-gray-200 p-4">
+                <div class="m-auto w-fit rounded-full bg-gray-200 p-4">
                   <img src="./assets/images/customers-6.png" alt="" />
                 </div>
               </li>
