--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="./assets/ts/main.ts" defer type="module"></script>
   </head>
   <body>
-    <div class="absolute left-0 hidden md:block">
+    <div class="absolute left-0 -z-10 hidden md:block">
       <img class="h-[1300px]" src="./assets/images/first-pattern.png" alt="" />
     </div>
     <header class="space-y-5">
