--- a/src/index.html
+++ b/src/index.html
@@ -1904,7 +1904,7 @@
             <ul class="splide__list">
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
@@ -1915,7 +1915,7 @@
               </li>
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
@@ -1926,7 +1926,7 @@
               </li>
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
@@ -1937,7 +1937,7 @@
               </li>
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
@@ -1948,7 +1948,7 @@
               </li>
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
@@ -1959,7 +1959,7 @@
               </li>
               <li class="splide__slide">
                 <div
-                  class=":p-[3px] group rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
+                  class=":p-[3px] group m-auto w-fit rounded-full outline-dashed outline-2 outline-transparent transition-all duration-700 hover:outline-green-600"
                 >
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
