--- a/src/solutions/index.html
+++ b/src/solutions/index.html
@@ -1009,6 +1009,6 @@
         </div>
       </div>
     </footer>
-    <script src="../assets/ts/nav.ts"></script>
+    <script src="/assets/ts/nav.ts"></script>
   </body>
 </html>
