--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">راهکار ها</a>
+            <a href="solutions.html">راهکار ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -140,7 +140,7 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">راهکار ها</a>
+                      <a href="solutions.html">راهکار ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
