--- a/src/solutions.html
+++ b/src/solutions.html
@@ -54,7 +54,7 @@
           <li><img src="./assets/images/logo-orange.png" alt="" /></li>
           <li>
             <a
-              href=""
+              href="/"
               class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
               >صفحه اصلی</a
             >
@@ -62,7 +62,7 @@
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">راهکار ها</a>
+            <a href="solutions.html">راهکار ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -134,7 +134,7 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">راهکار ها</a>
+                      <a href="solutions.html">راهکار ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -240,9 +240,13 @@
               stroke-linecap="round"
             />
           </svg>
-          <a class="font-medium text-gray-800" href="">صفحه اصلی</a>
+          <a
+            class="font-medium text-gray-800 transition-all duration-700 hover:brightness-50"
+            href="/"
+            >صفحه اصلی</a
+          >
           <p>/</p>
-          <a class="font-bold" href="">راهکار ها</a>
+          <a class="font-bold" href="solutions.html">راهکار ها</a>
         </div>
       </div>
     </header>
