--- a/src/solutions.html
+++ b/src/solutions.html
@@ -334,7 +334,7 @@
         <div
           class="flex rounded-3xl border bg-white lg:rounded-l-[100vw] lg:rounded-r-[18rem] lg:border-0 lg:bg-gray-50"
         >
-          <div class="space-y-4 p-6 font-medium">
+          <div class="w-full space-y-4 p-6 font-medium">
             <h2 class="text-3xl font-extrabold">مدیریت هتل های زنجیره ای</h2>
             <p>
               راهکار مدیریت هتل‌های زنجیره‌ای ما یک پلتفرم مرکزی برای مدیریت
