--- a/src/solutions.html
+++ b/src/solutions.html
@@ -55,12 +55,12 @@
           <li>
             <a
               href="/"
-              class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+              class="text-gray-800 transition-all duration-700 hover:brightness-50"
               >صفحه اصلی</a
             >
           </li>
           <li
-            class="text-gray-800 transition-all duration-700 hover:brightness-50"
+            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
           >
             <a href="solutions.html">راهکار ها</a>
           </li>
@@ -124,17 +124,19 @@
                     <li>
                       <img src="./assets/images/logo-orange.png" alt="" />
                     </li>
-                    <li>
-                      <a
-                        href=""
-                        class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
-                        >صفحه اصلی</a
-                      >
+                    <li
+                      class="text-gray-800 transition-all duration-700 hover:brightness-50"
+                    >
+                      <a href="">صفحه اصلی</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="solutions.html">راهکار ها</a>
+                      <a
+                        class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+                        href="solutions.html"
+                        >راهکار ها</a
+                      >
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
