--- a/src/solutions/index.html
+++ b/src/solutions/index.html
@@ -51,7 +51,7 @@
       </div>
       <nav class="container-w flex items-center justify-between font-medium">
         <ul class="hidden items-center gap-10 md:flex">
-          <li><img src="./assets/images/logo-orange.png" alt="" /></li>
+          <li><img src="../assets/images/logo-orange.png" alt="" /></li>
           <li>
             <a
               href="/"
@@ -60,7 +60,7 @@
             >
           </li>
           <li
-            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('../assets/images/Selected.svg')]"
           >
             <a href="solutions.html">راهکار ها</a>
           </li>
@@ -122,7 +122,7 @@
                 <div class="border-t-2 border-t-orange-400 p-3">
                   <ul class="flex flex-col items-center gap-10">
                     <li>
-                      <img src="./assets/images/logo-orange.png" alt="" />
+                      <img src="../assets/images/logo-orange.png" alt="" />
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -133,7 +133,7 @@
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
                       <a
-                        class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+                        class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('../assets/images/Selected.svg')]"
                         href="solutions.html"
                         >راهکار ها</a
                       >
@@ -163,7 +163,7 @@
               </div>
             </div>
           </button>
-          <img width="20" src="./assets/images/logo-orange.png" />
+          <img width="20" src="../assets/images/logo-orange.png" />
         </div>
         <div class="flex items-center gap-5">
           <a class="hidden md:block" href="">ورود / ثبت نام</a>
@@ -254,9 +254,9 @@
     </header>
     <main>
       <div class="m-auto my-28 w-fit">
-        <img class="hidden md:block" src="./assets/images/Header.png" alt="" />
+        <img class="hidden md:block" src="../assets/images/Header.png" alt="" />
         <img
-          src="./assets/images/header-mobile.png"
+          src="../assets/images/header-mobile.png"
           class="block md:hidden"
           alt=""
         />
@@ -615,7 +615,7 @@
           class="rounded-b-[100vw] rounded-t-[5rem] border-0 bg-gray-50 md:rounded-b-[10vw] lg:rounded-l-[100vw] lg:rounded-r-[18rem] lg:border lg:bg-white"
         >
           <div
-            class="mid-sm:pb-[11rem] space-y-4 py-6 pb-12 font-medium md:pb-0 lg:pb-0"
+            class="space-y-4 py-6 pb-12 font-medium mid-sm:pb-[11rem] md:pb-0 lg:pb-0"
           >
             <div
               class="w-fit rounded-l-[100vw] bg-white p-3 px-6 lg:bg-orange-400"
@@ -708,7 +708,7 @@
       </section>
       <div class="m-auto my-32 w-fit max-w-[30rem] space-y-7 px-5 text-center">
         <div class="flex flex-col items-center gap-5 text-center sm:flex-row">
-          <img src="./assets/images/logo-orange.png" alt="" />
+          <img src="../assets/images/logo-orange.png" alt="" />
           <div>
             <p class="mb-3 block !text-center text-4xl font-bold sm:text-right">
               خدمات هوشمند رزرواسیون
@@ -718,7 +718,7 @@
             >
               <h1 class="m-0 text-[2.5rem] font-extrabold">هتل و اقامتگاه</h1>
               <div>
-                <img width="128" src="./assets/images/mangotles.png" alt="" />
+                <img width="128" src="../assets/images/mangotles.png" alt="" />
               </div>
             </div>
           </div>
@@ -768,7 +768,7 @@
     </main>
     <footer class="mx-4 space-y-10 border-t pt-10">
       <div
-        class="container-w mid-sm:flex mx-3 hidden items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat"
+        class="container-w mx-3 hidden items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat mid-sm:flex"
       >
         <div class="flex items-center gap-3 p-3">
           <svg
@@ -816,18 +816,18 @@
         </div>
       </div>
       <div class="absolute left-0 hidden md:block">
-        <img class="h-[39rem]" src="./assets/images/pattern-6.png" alt="" />
+        <img class="h-[39rem]" src="../assets/images/pattern-6.png" alt="" />
       </div>
       <div
         class="m-auto flex max-w-[65rem] flex-col items-center gap-32 px-4 md:flex-row"
       >
-        <img width="" src="./assets/images/logo-with-text.png" alt="" />
+        <img width="" src="../assets/images/logo-with-text.png" alt="" />
 
         <p>
           <img
             class="inline"
             width="40"
-            src="./assets/images/mangotles.png"
+            src="../assets/images/mangotles.png"
             alt=""
           />
           یــک سیســتم جامــع هلتــداری طراحــی شــده مخصــوص بــازار ایـران بـا
@@ -855,8 +855,8 @@
             </button>
           </div>
           <div class="mt-7 hidden gap-3 md:flex">
-            <img src="./assets/images/en.png" alt="" />
-            <img src="./assets/images/sam.png" alt="" />
+            <img src="../assets/images/en.png" alt="" />
+            <img src="../assets/images/sam.png" alt="" />
           </div>
         </div>
         <div class="flex gap-4 *:basis-full">
@@ -976,21 +976,21 @@
       <div class="flex flex-col justify-between sm:flex-row">
         <ul class="flex items-center gap-3 md:hidden">
           <li>
-            <img src="./assets/images/instagram.png" alt="" />
+            <img src="../assets/images/instagram.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/youtube.png" alt="" />
+            <img src="../assets/images/youtube.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/whatsapp.png" alt="" />
+            <img src="../assets/images/whatsapp.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/facebook.png" alt="" />
+            <img src="../assets/images/facebook.png" alt="" />
           </li>
         </ul>
         <div class="mt-7 flex gap-3 md:hidden">
-          <img src="./assets/images/en.png" alt="" />
-          <img src="./assets/images/sam.png" alt="" />
+          <img src="../assets/images/en.png" alt="" />
+          <img src="../assets/images/sam.png" alt="" />
         </div>
       </div>
       <div class="border-t p-3">
@@ -1000,21 +1000,21 @@
           </p>
           <ul class="hidden items-center gap-3 md:flex">
             <li>
-              <img src="./assets/images/instagram.png" alt="" />
+              <img src="../assets/images/instagram.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/youtube.png" alt="" />
+              <img src="../assets/images/youtube.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/whatsapp.png" alt="" />
+              <img src="../assets/images/whatsapp.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/facebook.png" alt="" />
+              <img src="../assets/images/facebook.png" alt="" />
             </li>
           </ul>
         </div>
       </div>
     </footer>
-    <script type="module" src="./assets/ts/nav.ts"></script>
+    <script type="module" src="../assets/ts/nav.ts"></script>
   </body>
 </html>
