--- a/src/solutions/index.html
+++ b/src/solutions/index.html
@@ -60,7 +60,7 @@
             >
           </li>
           <li
-            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('../assets/images/Selected.svg')]"
+            class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
           >
             <a href="solutions.html">راهکار ها</a>
           </li>
@@ -133,7 +133,7 @@
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
                       <a
-                        class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('../assets/images/Selected.svg')]"
+                        class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
                         href="solutions.html"
                         >راهکار ها</a
                       >
